--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <h2>Here are some links to help you start: </h2>
 
 <h3>Product you have bought</h3>
-<app-cart></app-cart>
+<app-cart-list></app-cart-list>
 <h3>Product you can buy</h3>
 <app-product-list></app-product-list>
 <ul>
