Task 2 - added onPush strategy (not working for cart summary recalculation) - added Custom Directive for color change - added title changing based on @ViewChild directive - changelog.md file filled by new changes which had been implemented

--- a/src/app/cart/component/cart-list/cart-list.component.html
+++ b/src/app/cart/component/cart-list/cart-list.component.html
@@ -1,10 +1,9 @@
 <div *ngIf = "items != null && items.length > 0; else empty_cart">
   <table *ngFor="let item of items">
-    <app-cart-item [item] = 'item' (removeItem)='onDelete($event)' (addItem)='onAdd($event)'></app-cart-item>
+    <app-cart-item [highlight] = "'red'" [item] = 'item' (removeItem)='onDelete($event)' (addItem)='onAdd($event)'></app-cart-item>
   </table>
   <app-cart-summary></app-cart-summary>
 </div>
-
 <ng-template #empty_cart>
   <div>
     Cart is empty
