--- a/src/app/cart/component/cart-item/cart-item.component.html
+++ b/src/app/cart/component/cart-item/cart-item.component.html
@@ -1,7 +1,10 @@
 <tr>
   <td> <strong>Product name:</strong> {{item.product.name}} </td>
   <td> <strong>Price:</strong> {{item.product.price}} </td>
-  <td> <strong>Quantity:</strong> {{item.quantity}}</td>
-  <td><button (click)="onAdd(item.product)">Add</button></td>
-  <td><button (click)="onDelete(item.product)">Delete</button></td>
+  <td> <strong>Quantity:</strong>
+    <input type="text"
+           [(ngModel)] = "item.quantity">
+  </td>
+  <td><button (click)="onAdd(item.product)">+</button></td>
+  <td><button (click)="onDelete(item.product)">-</button></td>
 </tr>
