Task 3 - refactoring for task 2 - LocalStorageService, ConfigOptionsService was created - ConstantsService, GeneratorService and ContactUsComponent hasn't implemented yet

--- a/src/app/cart/component/cart-list/cart-list.component.html
+++ b/src/app/cart/component/cart-list/cart-list.component.html
@@ -3,6 +3,7 @@
     <app-cart-item [highlight] = "'red'" [item] = 'item' (removeItem)='onDelete($event)' (addItem)='onAdd($event)'></app-cart-item>
   </table>
   <app-cart-summary></app-cart-summary>
+  <button (click)='onClearCart()'>Clear Cart</button>
 </div>
 <ng-template #empty_cart>
   <div>
