--- a/src/app/cart/component/cart-summary/cart-summary.component.html
+++ b/src/app/cart/component/cart-summary/cart-summary.component.html
@@ -1,4 +1,4 @@
 <td>
-  <tr>Total price: {{summary.totalPrice}}</tr>
+  <tr>Total price: {{summary.totalPrice | currency: 'USD'}}</tr>
   <tr>Total Quantity: {{summary.totalQuantity}}</tr>
 </td>
