--- a/src/app/product/component/product-list/product-list.component.html
+++ b/src/app/product/component/product-list/product-list.component.html
@@ -3,4 +3,5 @@
 <div *ngFor="let product of products | async">
   <app-product [border] = "12" [product]='product'></app-product>
   <button [disabled]='!product.isAvailable' (click)="onBuy(product)">Buy it!</button>
+  <button (click)="onDetailsView(product)">Details</button>
 </div>
